--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
           if [ ${{ steps.sonar.outcome }} == 'failure' ]; then
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"El escaneo de SonarCloud ha fallado."}' $SLACK_WEBHOOK_URL
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"❌ El escaneo de SonarCloud ha fallado."}' $SLACK_WEBHOOK_URL
           else
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"El escaneo de SonarCloud ha finalizado con éxito."}' $SLACK_WEBHOOK_URL
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"✅ El escaneo de SonarCloud ha finalizado con éxito."}' $SLACK_WEBHOOK_URL
           fi
