--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "http-status-codes": "^2.3.0",
+    "lodash-es": "^4.17.21"
   }
 }
