--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
-    "pre-commit": "eslint . && lint-staged"
+    "pre-commit": "eslint . && lint-staged",
+    "start:local": "nodemon -r dotenv/config src/api.js"
   },
   "lint-staged": {
     "*.js": [
@@ -36,7 +37,15 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "bunyan": "^1.8.15",
+    "convict": "^6.2.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "nodemon": "^3.1.0"
   }
 }
