--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
     "pre-commit": "eslint . && lint-staged",
+    "lint": "eslint --fix 'src/**/*.{js,ts,tsx}'",
     "start:local": "nodemon -r dotenv/config src/api.js"
   },
   "lint-staged": {
@@ -31,7 +32,6 @@
     "@commitlint/config-conventional": "^19.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "prettier": "^3.2.5"
@@ -46,6 +46,7 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "lodash-es": "^4.17.21",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
