chore: add crypto helper file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 PORT=PORT
 
 BUNYAN_NAME=BUNYAN_NAME
+
+CRYPTO_SALTROUNDS=CRYPTO_SALTROUNDS
+CRYPTO_PRIVATEKEY=CRYPTO_PRIVATEKEY
+CRYPTO_EXPIRESIN=CRYPTO_EXPIRESIN
