--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bunyan": "^1.8.15",
     "convict": "^6.2.4",
@@ -45,6 +46,7 @@
     "express": "^4.19.1",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash-es": "^4.17.21",
     "nodemon": "^3.1.0",
     "swagger-ui-express": "^5.0.0"
