chore: change esm to common.js, some fixes & implement /auth/register endpoint

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ BUNYAN_NAME=BUNYAN_NAME
 CRYPTO_SALTROUNDS=CRYPTO_SALTROUNDS
 CRYPTO_PRIVATEKEY=CRYPTO_PRIVATEKEY
 CRYPTO_EXPIRESIN=CRYPTO_EXPIRESIN
+
+SEQUELIZE_DATABASE=SEQUELIZE_DATABASE
+SEQUELIZE_USERNAME=SEQUELIZE_USERNAME
+SEQUELIZE_PASSWORD=SEQUELIZE_PASSWORD
