--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,6 @@
 env:
-  browser: true
+  browser: false
+  commonjs: true
   es2021: true
   node: true
 extends:
@@ -7,7 +8,6 @@ extends:
   - prettier
 parserOptions:
   ecmaVersion: latest
-  sourceType: module
 rules:
   max-len:
     - error
