--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api.stucode",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "Este repositorio contiene el código fuente del backend para StuCode, una plataforma de publicación de artículos diseñada para la comunidad de desarrolladores web. El backend está construido utilizando Node.js y Express, y se integra con PostgreSQL para el almacenamiento de datos relacional.",
   "main": "api.js",
   "scripts": {
@@ -44,11 +44,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "express-openapi-validator": "^5.1.6",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "isemail": "^3.2.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
-    "lodash-es": "^4.17.21",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.1",
     "swagger-ui-express": "^5.0.0"
   }
 }
