--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "api.stucode",
   "version": "1.0.0",
-  "type": "commonjs",
   "description": "Este repositorio contiene el código fuente del backend para StuCode, una plataforma de publicación de artículos diseñada para la comunidad de desarrolladores web. El backend está construido utilizando Node.js y Express, y se integra con PostgreSQL para el almacenamiento de datos relacional.",
   "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/**/*.js",
+    "report": "mocha --recursive tests --reporter mochawesome",
+    "coverage": "nyc npm test",
     "prepare": "husky",
     "pre-commit": "eslint . && lint-staged",
     "lint": "eslint --fix 'src/**/*.{js,ts,tsx}'",
@@ -27,6 +28,26 @@
     "url": "https://github.com/michaelhr97/api.stucode/issues"
   },
   "homepage": "https://github.com/michaelhr97/api.stucode#readme",
+  "nyc": {
+    "all": true,
+    "check-coverage": true,
+    "include": "src",
+    "exclude": [
+      "tests",
+      "src/models/**",
+      "src/lib/db.js"
+    ],
+    "branches": 60,
+    "lines": 60,
+    "functions": 60,
+    "statements": 60,
+    "reporter": [
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "report-dir": "coverage"
+  },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
@@ -34,12 +55,17 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
-    "prettier": "^3.2.5"
+    "mochawesome": "^7.1.3",
+    "nyc": "^15.1.0",
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bunyan": "^1.8.15",
+    "chai": "^4.3.4",
+    "chai-http": "^4.4.0",
     "convict": "^6.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -51,6 +77,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
