chore: configure eslint and prettier

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,12 +3,19 @@ env:
   commonjs: true
   es2021: true
   node: true
+  jest: true
 extends:
   - eslint:recommended
+  - plugin:prettier/recommended
+plugins:
   - prettier
 parserOptions:
   ecmaVersion: latest
 rules:
+  prettier/prettier:
+    - error
+  eqeqeq:
+    - warn
   max-len:
     - error
     - code: 120
