--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "api.stucode",
   "version": "1.0.0",
   "description": "Este repositorio contiene el código fuente del backend para StuCode, una plataforma de publicación de artículos diseñada para la comunidad de desarrolladores web. El backend está construido utilizando Node.js y Express, y se integra con PostgreSQL para el almacenamiento de datos relacional.",
-  "main": "api.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest --watch",
     "prepare": "husky",
     "pre-commit": "eslint . && lint-staged",
     "lint": "eslint 'src/**/*.js'",
-    "start:local": "nodemon -r dotenv/config src/api.js",
-    "start": "node -r dotenv/config src/api.js"
+    "start:local": "nodemon -r dotenv/config src/index.js"
   },
   "lint-staged": {
     "*.js": [
