--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,6 @@ sonar.projectName=api.stucode
 sonar.projectVersion=1.0
 sonar.sources=./src
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, test/**, coverage/**,*.sh, app/models, configuration.js
+sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, __tests__/**, coverage/**,*.sh, app/models, configuration.js
 sonar.tests=./__tests__
 sonar.language=javascript
