--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,9 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_DB: stucode
-          POSTGRES_USER: stucode
-          POSTGRES_PASSWORD: stucode
+          SEQUELIZE_DATABASE: stucode
+          SEQUELIZE_USERNAME: stucode
+          SEQUELIZE_PASSWORD: stucode
         ports:
           - 5432:5432
     steps:
