--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,6 @@ CRYPTO_SALTROUNDS=CRYPTO_SALTROUNDS
 CRYPTO_PRIVATEKEY=CRYPTO_PRIVATEKEY
 CRYPTO_EXPIRESIN=CRYPTO_EXPIRESIN
 
-SEQUELIZE_DATABASE=SEQUELIZE_DATABASE
-SEQUELIZE_USERNAME=SEQUELIZE_USERNAME
-SEQUELIZE_PASSWORD=SEQUELIZE_PASSWORD
+POSTGRES_DB=POSTGRES_DB
+POSTGRES_USER=POSTGRES_USER
+POSTGRES_PASSWORD=POSTGRES_PASSWORD
