test: implement GET /v1/user/{id} test

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Este repositorio contiene el código fuente del backend para StuCode, una plataforma de publicación de artículos diseñada para la comunidad de desarrolladores web. El backend está construido utilizando Node.js y Express, y se integra con PostgreSQL para el almacenamiento de datos relacional.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --config ./jest.config.json --verbose --detectOpenHandles",
     "prepare": "husky",
     "pre-commit": "eslint . && lint-staged",
     "lint": "eslint 'src/**/*.js'",
-    "start:local": "nodemon -r dotenv/config src/index.js"
+    "start:local": "nodemon --inspect=9238 -r dotenv/config src/index.js"
   },
   "lint-staged": {
     "*.js": [
