test: implement 401 Unauthorized GET /v1/user/{id} test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,7 @@
       "type": "node",
       "request": "launch",
       "name": "API",
-      "program": "${workspaceFolder}/src/api.js",
-      "runtimeArgs": [
-        "--inspect=9229"
-      ]
+      "restart": true,
     }
   ]
 }
