feat: add jobTitle and biography to user

--- a/src/openapi/api.yml
+++ b/src/openapi/api.yml
@@ -354,6 +354,8 @@ components:
         - id
         - name
         - email
+        - jobTitle
+        - biography
         - accountId
         - createdAt
         - updatedAt
