fix: convert name property to required in /user/register

--- a/src/openapi/api.yml
+++ b/src/openapi/api.yml
@@ -72,6 +72,7 @@ paths:
                   description: The user's chosen password.
                   example: mySecretPassword123
               required:
+                - name
                 - email
                 - password
               additionalProperties: false
