--- a/src/openapi/api.yml
+++ b/src/openapi/api.yml
@@ -126,8 +126,8 @@ paths:
     get:
       tags:
         - user
-      # security:
-      #   - bearerAuth: []
+      security:
+        - bearerAuth: []
       summary: Retrieve a list of users
       description: |
         This endpoint allows retrieving a list of users from the system.
@@ -183,8 +183,8 @@ paths:
     get:
       tags:
         - user
-      # security:
-      #   - bearerAuth: []
+      security:
+        - bearerAuth: []
       summary: Retrieve user details
       description: |
         This endpoint is used to retrieve specific details of a user using its ID.
@@ -207,8 +207,8 @@ paths:
     put:
       tags:
         - user
-      # security:
-      #   - bearerAuth: []
+      security:
+        - bearerAuth: []
       summary: Update user details
       description: |
         This endpoint is used to update specific details of a user using its ID.
@@ -254,8 +254,8 @@ paths:
     delete:
       tags:
         - user
-      # security:
-      #   - bearerAuth: []
+      security:
+        - bearerAuth: []
       summary: Delete user details
       description: |
         This endpoint is used to delete a user using its ID.
@@ -275,8 +275,8 @@ paths:
     post:
       tags:
         - article
-      # security:
-      #   - bearerAuth: []
+      security:
+        - bearerAuth: []
       summary: Create a new article.
       description: |
         Endpoint to create a new article. Requires the user's ID, article image, title, and content in the request body in JSON format. The user's ID must be in UUID format. Upon successful creation, the endpoint returns the details of the created article.
@@ -316,8 +316,8 @@ paths:
     get:
       tags:
         - article
-      # security:
-      #   - bearerAuth: []
+      security:
+        - bearerAuth: []
       x-eov-operation-handler: articleController
       operationId: findAll
       responses:
