--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --config ./jest.config.json --verbose --detectOpenHandles",
+    "coverage": "jest --config ./jest.config.json --verbose --detectOpenHandles --coverage",
     "prepare": "husky",
     "pre-commit": "eslint . && lint-staged",
     "lint": "eslint 'src/**/*.js'",
