--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "4.6.3"
   }
 }
