--- a/package.json
+++ b/package.json
@@ -51,13 +51,12 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "isemail": "^3.2.0",
-    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.1",
-    "swagger-ui-express": "4.15.5"
+    "redoc-express": "^2.1.0",
+    "sequelize": "^6.37.1"
   }
 }
