--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "prisma": "^5.13.0",
     "supertest": "^6.3.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bunyan": "^1.8.15",
@@ -54,8 +56,6 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "nodemon": "^3.1.0",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
     "redoc-express": "^2.1.0",
     "sequelize": "^6.37.1"
   }
